fix(bar): spacings to close #108

--- a/src/_chaarts-bar.scss
+++ b/src/_chaarts-bar.scss
@@ -72,6 +72,7 @@
 		font-weight: bold;
 		inset-inline-start: 100%;
 		line-height: 1.5;
+		padding-inline-start: .5ch;
 		position: absolute;
 	}
 
